fix - UI : bug where ui doesnt scale greatly on smaller screen resolution (usual: 3440x1440, here: 1920x1080). I'll plan to go in depth to fix this issue later

--- a/asset/style.css
+++ b/asset/style.css
@@ -53,7 +53,7 @@ body {
 .ng_player_pfp {
 	justify-content: center;
 	width: 100%;
-	height: 400px;
+	height: 300px;
 	display: flex;
 }
 
@@ -122,8 +122,8 @@ body {
 
 #ng_player1_pfp_display,
 #ng_player2_pfp_display {
-	height: 400px;
-	width: 400px;
+	height: 300px;
+	width: 300px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
